--- a/index.html
+++ b/index.html
@@ -7,37 +7,71 @@
     <link rel="stylesheet" href="./assets/css/style.css">
 </head>
 <body>
-    <header>
-        
-    </header>
-    <div class="container">
-        <div class="blender">
-            <div class="sections">
-                <div class="section" id="section1"></div>
-                <div class="section" id="section2"></div>
-                <div class="section" id="section3"></div>
-                <div class="section" id="section4"></div>
-                <div class="section" id="section5"></div>
-            </div>
-            <div class="controls">
-                <button id="mix">Mix</button>
-                <button id="clear">Clear</button>
-            </div>
-            <div class="flavor-scales">
-                <div>Sweetness: <div class="scale" id="sweetness-scale"></div></div>
-                <div>Acidity: <div class="scale" id="acidity-scale"></div></div>
-                <div>Bitterness: <div class="scale" id="bitterness-scale"></div></div>
-            </div>
+    <div id="welcome">
+    <h2>We are glad to see you again.</h2>
+    <p>This app will immerse you in cocktail mixology.<br/>
+     Here you can mix different components and ingredients and get something new, tasty, energizing and have a great time.</p>
+    <button id="close-welcome">Enjoy</button>
+</div>
+    <div class="container"> 
+    <div class="tips">
+        <div class="logo">
+            <img id="logo" src="./assets/img/logo.jpeg" alt="Logo Blender Mixer">
         </div>
-        <div class="ingredients">
-            <div class="ingredient" data-id="1" data-color="rgb(255, 0, 0)" data-sweetness="7" data-acidity="3" data-bitterness="2">Strawberry</div>
-            <div class="ingredient" data-id="2" data-color="rgb(0, 255, 0)" data-sweetness="2" data-acidity="5" data-bitterness="3">Apple</div>
-            <div class="ingredient" data-id="3" data-color="rgb(0, 0, 255)" data-sweetness="4" data-acidity="1" data-bitterness="5">Blueberry</div>
+        <div class="tips-text">
+            <h1>Recipes:</h1>           
+            <div id="recipes"></div>
+            </div>
+
+    </div>
+    <div class="blender">
+        <div class="sections">
+            <div class="section" id="section1"></div>
+            <div class="section" id="section2"></div>
+            <div class="section" id="section3"></div>
+            <div class="section" id="section4"></div>
+            <div class="section" id="section5"></div>
+        </div>
+        <div class="controls">
+            <button id="mix">Mix</button>
+            <button id="clear">Clear</button>
+        </div>
+        <div class="flavor-scales">
+            <div>Sweetness: 
+                <div class="scale" id="sweetness-scale">
+                    <div class="fill" id="sweetness-fill"></div>
+                </div>
+            </div>
+            <div>Sourness: 
+                <div class="scale" id="tartness-scale">
+                    <div class="fill" id="tartness-fill"></div>
+                </div>
+            </div>
+            <div>Bitterness: 
+                <div class="scale" id="bitterness-scale">
+                    <div class="fill" id="bitterness-fill"></div>
+                </div>
+            </div>
         </div>
     </div>
-    <footer>
+    <div class="ingredients-section">
 
+        <div class="ingredients" id="ingredients-list"></div>
+    </div>
+</div>
+<div id="popup" class="popup hidden">
+    <div class="popup-content">
+        <div id="popup-title"></div>
+        <span id="popup-text"></span>
+        <p id="popup-descript"></p>
+        <button id="close-popup">Try again</button>
+    </div>
+</div> 
+    <footer> <h1 class="footer-h1">COCTAIL BLENDER</h1>
     </footer>
-    <script src="./assets/js/main.js"></script>
+    <script src="assets/js/ingredients.js"></script>
+    <script src="assets/js/recipes.js"></script>
+     
+    <script src="assets/js/main.js"></script>
 </body>
 </html>
