--- a/index.html
+++ b/index.html
@@ -69,9 +69,9 @@
 </div> 
     <footer> <h1 class="footer-h1">COCTAIL BLENDER</h1>
     </footer>
-    <script src="assets/js/ingredients.js"></script>
-    <script src="assets/js/recipes.js"></script>
+    <script src="./assets/js/ingredients.js"></script>
+    <script src="./assets/js/recipes.js"></script>
      
-    <script src="assets/js/main.js"></script>
+    <script src="./assets/js/main.js"></script>
 </body>
 </html>
