--- a/index.html
+++ b/index.html
@@ -1,77 +1,82 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Blender App</title>
     <link rel="stylesheet" href="./assets/css/style.css">
 </head>
+
 <body>
     <div id="welcome">
-    <h2>We are glad to see you again.</h2>
-    <p>This app will immerse you in cocktail mixology.<br/>
-     Here you can mix different components and ingredients and get something new, tasty, energizing and have a great time.</p>
-    <button id="close-welcome">Enjoy</button>
-</div>
-    <div class="container"> 
-    <div class="tips">
-        <div class="logo">
-            <img id="logo" src="./assets/img/logo.jpeg" alt="Logo Blender Mixer">
-        </div>
-        <div class="tips-text">
-            <h1>Recipes:</h1>           
-            <div id="recipes"></div>
+        <h2>We are glad to see you again.</h2>
+        <p>This app will immerse you in cocktail mixology.<br />
+            Here you can mix different components and ingredients and get something new, tasty, energizing and have a
+            great time.</p>
+        <button id="close-welcome">Enjoy</button>
+    </div>
+    <div class="container">
+        <div class="tips">
+            <div class="logo">
+                <img id="logo" src="./assets/img/logo.jpeg" alt="Logo Blender Mixer">
+            </div>
+            <div class="tips-text">
+                <h1>Recipes:</h1>
+                <div id="recipes"></div>
             </div>
 
-    </div>
-    <div class="blender">
-        <div class="sections">
-            <div class="section" id="section1"></div>
-            <div class="section" id="section2"></div>
-            <div class="section" id="section3"></div>
-            <div class="section" id="section4"></div>
-            <div class="section" id="section5"></div>
         </div>
-        <div class="controls">
-            <button id="mix">Mix</button>
-            <button id="clear">Clear</button>
-        </div>
-        <div class="flavor-scales">
-            <div>Sweetness: 
-                <div class="scale" id="sweetness-scale">
-                    <div class="fill" id="sweetness-fill"></div>
+        <div class="blender">
+            <div class="sections">
+                <div class="section" id="section1"></div>
+                <div class="section" id="section2"></div>
+                <div class="section" id="section3"></div>
+                <div class="section" id="section4"></div>
+                <div class="section" id="section5"></div>
+            </div>
+            <div class="controls">
+                <button id="mix">Mix</button>
+                <button id="clear">Clear</button>
+            </div>
+            <div class="flavor-scales">
+                <div>Sweetness:
+                    <div class="scale" id="sweetness-scale">
+                        <div class="fill" id="sweetness-fill"></div>
+                    </div>
+                </div>
+                <div>Sourness:
+                    <div class="scale" id="tartness-scale">
+                        <div class="fill" id="tartness-fill"></div>
+                    </div>
+                </div>
+                <div>Bitterness:
+                    <div class="scale" id="bitterness-scale">
+                        <div class="fill" id="bitterness-fill"></div>
+                    </div>
                 </div>
             </div>
-            <div>Sourness: 
-                <div class="scale" id="tartness-scale">
-                    <div class="fill" id="tartness-fill"></div>
-                </div>
-            </div>
-            <div>Bitterness: 
-                <div class="scale" id="bitterness-scale">
-                    <div class="fill" id="bitterness-fill"></div>
-                </div>
-            </div>
         </div>
-    </div>
-    <div class="ingredients-section">
+        <div class="ingredients-section">
 
-        <div class="ingredients" id="ingredients-list"></div>
+            <div class="ingredients" id="ingredients-list"></div>
+        </div>
     </div>
-</div>
-<div id="popup" class="popup hidden">
-    <div class="popup-content">
-        <div id="popup-title"></div>
-        <span id="popup-text"></span>
-        <p id="popup-descript"></p>
-        <button id="close-popup">Try again</button>
+    <div id="popup" class="popup hidden">
+        <div class="popup-content">
+            <div id="popup-title"></div>
+            <span id="popup-text"></span>
+            <p id="popup-descript"></p>
+            <button id="close-popup">Try again</button>
+        </div>
     </div>
-</div> 
-    <footer> <h1 class="footer-h1">COCTAIL BLENDER</h1>
+    <footer>
+        <h1 class="footer-h1">COCTAIL BLENDER</h1>
     </footer>
     <script src="./assets/js/ingredients.js"></script>
     <script src="./assets/js/recipes.js"></script>
-     
+
     <script src="./assets/js/main.js"></script>
 </body>
+
 </html>
