--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="apple-touch-icon" sizes="180x180" href="./assets/img/favicon_io/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="./assets/img/favicon_io/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="./assets/img/favicon_io/favicon-16x16.png">
+    <link rel="manifest" href="./assets/img/favicon_io/site.webmanifest">
     <title>Blender App</title>
     <link rel="stylesheet" href="./assets/css/style.css">
 </head>
@@ -11,7 +15,7 @@
 <body>
     <div id="welcome">
         <h2>We are glad to see you again.</h2>
-        <p>This app will immerse you in cocktail mixology.<br />
+        <p>This app will immerse you in cocktail mixology.<br>
             Here you can mix different components and ingredients and get something new, tasty, energizing and have a
             great time.</p>
         <button id="close-welcome">Enjoy</button>
@@ -46,8 +50,8 @@
                     </div>
                 </div>
                 <div>Sourness:
-                    <div class="scale" id="tartness-scale">
-                        <div class="fill" id="tartness-fill"></div>
+                    <div class="scale" id="sourness-scale">
+                        <div class="fill" id="sourness-fill"></div>
                     </div>
                 </div>
                 <div>Bitterness:
