--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
         </div>
     </div>
     <footer>
-        <h1 class="footer-h1">COCTAIL BLENDER</h1>
+        <h1 class="footer-h1">COCKTAIL BLENDER</h1>
     </footer>
     <script src="./assets/js/ingredients.js"></script>
     <script src="./assets/js/recipes.js"></script>
